# microsql-engine

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  microsql.config.json  pyproject.toml  query.sql  users.csv
.github/workflows/: ci-cd.yml
docs/: ADR-0001-new-feature.md  LAB5_DEPLOYMENT.md
src/microsql/: __init__.py  ast_nodes.py  cli.py  config.py  csv_utils.py  engine.py  exceptions.py  parser.py  specifications.py  tokenizer.py
tests/: test_cli.py  test_config.py  test_csv_utils.py  test_engine.py  test_parser.py  test_specifications.py
