[tool.poetry]
name = "microsql-engine"
version = "0.3.0"
description = "Micro-SQL engine for CSV files (educational project)"
authors = ["Student <student@example.com>"]
readme = "README.md"
packages = [{ include = "microsql", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[tool.poetry.scripts]
microsql = "microsql.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --cov=src/microsql --cov-report=term-missing --cov-fail-under=70"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["N802"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
